<resources>
    <string name="app_name">Story From NoWhere</string>
    <string name="thumbnail">Thumbnail of the app</string>
    <string name="sign_up">가입하기</string>
    <string name="sign_in">로그인</string>
    <string name="set_auto_sign_in">자동 로그인 하기</string>
    <string name="nickname">별명</string>
    <string name="password">비밀번호</string>

    <string name="auto_sign_in">자동 로그인</string>
    <string name="remember_nickname">별명 기억하기</string>
    <string name="nickname_hint">별명 (2글자 이상)</string>
    <string name="password_hint">비밀번호 (6글자 이상)</string>

    <string name="error_title">오류가 발생했습니다.</string>
    <string name="network_error_content">데이터 수신에 실패했습니다.\n네트워크 상태를 확인해주세요.</string>

    <string name="menu_feed">피드</string>
    <string name="menu_take_photo">촬영</string>
    <string name="menu_more">더보기</string>

</resources>
