<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.movingroot.storyfromnowhere.ui.sign.sighin.SignInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/light_olive"
            android:paddingHorizontal="10dp"
            android:text="@string/app_name"
            android:textColor="@color/dark_brown"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".25" />

        <EditText
            style="@style/input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/nickname"
            android:text="@={viewModel._nickNameInput}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/title"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".4" />

        <EditText
            style="@style/input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:text="@={viewModel._passwordInput}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/title"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".48" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/btn_selector"
            android:enabled="@{viewModel.isSignInEnabled()}"
            android:onClick="@{() -> viewModel.toSignInPage()}"
            android:stateListAnimator="@null"
            android:text="@string/sign_in"
            android:textSize="@dimen/btn_desc"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/title"
            app:layout_constraintHeight_percent=".08"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="false"
            android:longClickable="false"
            android:onClick="@{() -> viewModel.toSignUpPage()}"
            android:text="@string/sign_up"
            android:textColor="@color/dark_olive"
            android:textSize="@dimen/text_btn"
            app:layout_constraintEnd_toEndOf="@id/title"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/btnSignIn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
