<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.movingroot.storyfromnowhere.ui.sign.signup.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/transparent"
            android:onClick="@{() -> viewModel.toSignIn()}"
            android:src="@drawable/ic_arrow_back"
            android:stateListAnimator="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            style="@style/input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/nickname_hint"
            android:text="@={viewModel._inputNickname}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".4"
            app:layout_constraintWidth_percent=".6" />

        <EditText
            style="@style/input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:text="@={viewModel._inputPassword}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".48"
            app:layout_constraintWidth_percent=".6" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/btn_selector"
            android:enabled="@{viewModel.isSignUpEnabled()}"
            android:onClick="@{() -> viewModel.requestSigningUp()}"
            android:stateListAnimator="@null"
            android:text="@string/sign_up"
            android:textSize="@dimen/btn_desc"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".7"
            app:layout_constraintWidth_percent=".6" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
